# opencl-examples

./: .gitignore
001-platforms/: CMakeLists.txt  build.sh  test.sh
001-platforms/src/: main.cpp
